<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_bg"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="90dp"
        android:enabled="true"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000"
        android:textSize="19pt" />

    <EditText
        android:id="@+id/destinationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/destinationPrompt"
        android:inputType="textPostalAddress"
        android:textColor="#000"
        android:textColorHint="#333"
        android:textSize="12pt" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/queryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchTitle"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/poiPrompt"
        android:inputType="textPostalAddress"
        android:textColor="#000"
        android:textColorHint="#333"
        android:textSize="12pt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/queryInput"
        android:layout_marginTop="26dp"
        android:onClick="searchOnClick"
        android:text="@string/Search" />

</RelativeLayout>